--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background: linear-gradient(217deg, rgba(212, 0, 255, 0.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(127deg, rgba(17, 17, 16, 0.8), rgba(0,255,0,0) 70.71%),
-            linear-gradient(336deg, rgba(97, 97, 109, 0.8), rgba(0,0,255,0) 70.71%);
+            linear-gradient(336deg, rgba(51, 51, 58, 0.8), rgba(212, 0, 25, 0) 70.71%);
     font-weight: 900;
     color:yellow;
     font-size: large;
