completng functionality to display message along with score

--- a/style.css
+++ b/style.css
@@ -6,17 +6,30 @@ body{
     font-weight: bolder;
     color:black;
     font-size: 25px;
+    
 }
 /* #quiz1{
 
     border: 2px solid purple;
     width: 1000px
 } */
-#results{  
+/* #results{  
    
-    border: 2px red solid;
+   border: 2px goldenrod dashed;
    height: 80px;
    width: 255px;
+} */
+#button{
+    
+    background-color: goldenrod;
+    color:purple;
+    font-size: 18px;;
+    font-weight: bolder;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+
 }
 
 h1{
