--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 1.5em;
     background: linear-gradient(217deg, rgba(212, 0, 255, 0.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(127deg, rgba(17, 17, 16, 0.8), rgba(0,255,0,0) 70.71%),
-            linear-gradient(336deg, rgba(51, 51, 58, 0.8), rgba(212, 0, 25, 0) 70.71%);
+            linear-gradient(336deg,gold, rgba(168, 27, 44, 0) 70.71%);
     font-weight: bolder;
     color:black;
     font-size: 25px;
