final commit for presentation

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ button:hover{
     margin-left: 75%;
     
 }
+/* stretch goal if time permits */
 .atimer{
     margin-left: 50%;
     border: 5px solid black;
