--- a/style2.css
+++ b/style2.css
@@ -23,6 +23,9 @@ h1{
     justify-content: center;
     align-items: center;
 }
+.header1{
+    border-radius:10px;
+}
 
 .letsGo{
     margin-left: 50%;
